--- a/back-end/pom.xml
+++ b/back-end/pom.xml
@@ -11,7 +11,7 @@
 	<groupId>xyz.nimanthikaabeyrathna</groupId>
 	<artifactId>back-end</artifactId>
 	<version>1.0.0</version>
-	<packaging>war</packaging>
+	<packaging>jar</packaging>
 	<name>back-end</name>
 	<description>Finance Management System</description>
 	<properties>
